<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="45dp"
        android:text="@string/myhealth"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:text="@string/all_your_medical_data_in_one_place"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/preview"
        />


    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        />



    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/i_m_already_a_member_sign_in"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="?android:attr/selectableItemBackground"

        />

</LinearLayout>