<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="45dp"
        android:text="@string/sign_up"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:text="@string/create_myhealth_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/textView_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/or_continue_with"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"

        />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/i_m_already_a_member_sign_in"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="?android:attr/selectableItemBackground"

        />

</LinearLayout>